[package]
name = "img2pb2"
version = "0.1.0"
edition = "2021"

[lib]
name = "img2pb2"
path = "src/lib.rs"

[[bin]]
name = "img2pb2"
path = "src/main.rs"

[dependencies]
eframe = "0.30"
rfd = "0.15"
image = "0.25"
png = "0.18"
jpeg-decoder = "0.3"

# Web-only dependencies. These are only compiled for the `wasm32` target and
# back the in-memory file picking / download helpers in `src/lib.rs`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "Url",
    "Window",
] }
js-sys = "0.3"

[build-dependencies]
winres = "0.1"

[workspace]
members = ["web-pkg"]
resolver = "2"
